--- a/foundations/06-cascade-fix/style.css
+++ b/foundations/06-cascade-fix/style.css
@@ -1,17 +1,13 @@
-.para,
-.small-para {
+.para {
   color: hsl(0, 100%, 50%);
+  font-size: 22px;
 }
 
 .small-para {
   font-size: 12px;
 }
 
-.para {
-  font-size: 22px;
-}
-
-.confirm {
+.button.confirm {
   background: green;
   color: white;
   font-size: 20px;
@@ -24,7 +20,7 @@
   font-size: 20px;
 }
 
-.child {
+.child.text {
   color: red;
   font-size: 14px;
 }
